lesson9/log-analytics-platform/istio/peer-authentication.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: default
  namespace: log-analytics
spec:
  mtls:
    mode: STRICT
